# mcp-sinstaller

./: .coverage  .gitignore  Makefile  README.md  analysis_service.py  docker_service.py  github_service.py  mcp_installer.py  process_runner.py  pyproject.toml  response_formatter.py  server_manager.py
.github/workflows/: test.yml
tests/: test_analysis_service.py  test_docker_service.py  test_github_service.py  test_server_manager.py
