[project]
name = "mcp-sinstaller"
version = "0.1.0"
description = "MCP server for installing and containerizing other MCP servers from GitHub repositories"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.9.0",
]
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pyfakefs>=5.0.0",
]

[project.scripts]
mcp-sinstaller = "mcp_installer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
